# python-typeapi

./: .gitignore  404.html  LICENSE  README.md  index.html  objects.inv  pyproject.toml  readme.md  sitemap.xml
.changelog/: 0.1.0.toml  0.1.0a2.toml  0.1.0a3.toml  0.1.0a4.toml  0.1.0a5.toml  0.1.1.toml  0.1.2.toml  0.1.3.toml  0.1.4.toml  0.1.5.toml  0.1.6.toml  0.2.0.toml  0.2.1.toml  0.2.2.toml  1.0.0.toml  1.0.1.toml  1.1.0.toml  1.2.0.toml  1.2.1.toml  1.3.0.toml  1.3.1.toml  1.3.2.toml  1.3.3.toml  1.3.4.toml  1.3.5.toml  1.4.0.toml  1.4.1.toml  1.4.2.toml  1.4.3.toml  1.5.0.toml  1.5.1.toml  2.0.0.toml  2.0.1.toml  2.1.0.toml  2.1.1.toml  2.2.0.toml  2.2.1.toml  _unreleased.toml
.github/workflows/: docs.yaml  python.yml
api/typeapi/: index.html
api/typeapi.api/: index.html
api/typeapi.deconstruct/: index.html
api/typeapi.model/: index.html
api/typeapi.parser/: index.html
api/typeapi.typehint/: index.html
api/typeapi.utils/: index.html
changelog/: index.html
docs/: .gitignore  build.novella  changelog.sh  mkdocs.yml  requirements.txt
docs/content/: changelog.md
docs/content/api/: typeapi.api.md  typeapi.deconstruct.md  typeapi.md  typeapi.model.md  typeapi.parser.md  typeapi.typehint.md  typeapi.utils.md
docs/docs/: changelog.md  examples.md  features.md  getting-started.md  supported-features.md
docs/docs/api/: typeapi.AnnotatedTypeHint.md  typeapi.ClassTypeHint.md  typeapi.ForwardRefTypeHint.md  typeapi.LiteralTypeHint.md  typeapi.TupleTypeHint.md  typeapi.TypeHint.md  typeapi.TypeVarTypeHint.md  typeapi.UnionTypeHint.md  typeapi.md  typeapi.utils.md
examples/: index.html
features/: index.html
scripts/: dump_type_vars.py  github_actions_get_python_versions.py
search/: search_index.json
src/typeapi/: __init__.py  api.py  deconstruct.py  model.py  parser.py  typehint.py  typehint_test.py  utils.py  utils_test.py
src/typeapi/backport/: inspect.py
src/typeapi/future/: astrewrite.py  fake.py  fake_test.py
test/: test___init__.py  test_api.py  test_deconstruct.py  test_model.py  test_parser.py  test_readme.py  test_utils.py  utils.py
test/typeapi/: test_deconstruct.py  test_utils.py
tests/: test___init__.py  test_model.py  test_parser.py  test_readme.py  test_utils.py  utils.py
