[build-system]
# NOTE(NiklasRosenstein): We pin this version so we can keep using the old way that Slap supports installing
#                         the "docs" extra without Poetry complaining about invalid format of the requirements.
requires = ["poetry-core>=1.1.0a6"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "typeapi"
version = "2.2.1"
description = ""
authors = ["Niklas Rosenstein <rosensteinniklas@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "typeapi", from = "src" }]
classifiers = []
keywords = []

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/NiklasRosenstein/python-typeapi/issues"
Documentation = "https://niklasrosenstein.github.io/python-typeapi/"
Homepage = "https://github.com/NiklasRosenstein/python-typeapi"
# Repository = ""

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = ">=3.0.0"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "*"
types-dataclasses = "^0.6.5"
isort = "^5.10.1"
flake8 = "^5.0.4"
black = "^24.0.0"
astor = "^0.8.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = {version = "*", extras = ["python"]}
mksync = "^0.1.4"

[tool.slap]
typed = true

[tool.slap.test]
check = "slap check"
mypy = "dmypy run src/"
pytest = "pytest src/ -vv --doctest-modules"
black = "black --check src/"
isort = "isort --check-only src/"
flake8 = "flake8 src/"

[tool.slap.run]
"docs:build" = "cd docs && mkdocs build --site-dir _site"
"docs:dev" = "cd docs && mkdocs serve"
fmt = "black src/ && isort src/"

[tool.mypy]
python_version = "3.8"
explicit_package_bases = true
mypy_path = ["src"]
namespace_packages = true
pretty = true
show_error_codes = true
show_error_context = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = false

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true

[tool.black]
line-length = 120
